Refactor Jekyll configuration for Aqua Avenue
Updated configuration settings for Aqua Avenue site, including title, author, and URL. Removed unnecessary comments and streamlined the structure.

--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,24 @@
-# Site settings
-title: Aqua Avenue
-email: willardwells@gmail.com
-description: >-
-  A modern tech blog and portfolio showcasing innovative projects,
-  web development insights, and cutting-edge technology solutions.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# =========================================
+# Aqua Avenue - Jekyll Configuration
+# GitHub Pages Project Site Setup
+# =========================================
 
-# Social media
-twitter_username: willylondon
-instagram_username: willylondon
-tiktok_username: willylondon
-github_username: willylondon
+title: "Aqua Avenue"
+description: "A modern portfolio + blog with a clean, Medium-style reading experience."
+author: "Willy London"
+email: "willardwells@gmail.com"
 
-# Author information
-author:
-  name: Aqua Avenue
-  email: willardwells@gmail.com
-  twitter: willylondon
+# IMPORTANT (Project repo deployment)
+url: "https://willylondon.github.io"
+baseurl: "/aqua_avenue_jekyll"
 
 # Build settings
-theme: null
 markdown: kramdown
 highlighter: rouge
+permalink: /:categories/:year/:month/:day/:title/
+timezone: "America/Jamaica"
 
-# Plugins
+# Plugins (GitHub Pages compatible)
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
@@ -43,42 +37,32 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      comments: true
+      author: "Willy London"
   - scope:
       path: ""
       type: "projects"
     values:
       layout: "project"
-  - scope:
-      path: ""
-      type: "pages"
-    values:
-      layout: "page"
 
-# Exclude from processing
+# Sass / Assets
+sass:
+  sass_dir: _sass
+  style: compressed
+
+# Feed
+feed:
+  path: feed.xml
+
+# SEO / Social (optional)
+twitter_username: ""
+github_username: "willylondon"
+
+# Excludes
 exclude:
   - Gemfile
   - Gemfile.lock
   - node_modules
-  - vendor/bundle/
-  - vendor/cache/
-  - vendor/gems/
-  - vendor/ruby/
+  - vendor
   - README.md
-
-# Pagination
-#paginate: 10
-#paginate_path: "/blog/page:num/"
-
-# Kramdown settings
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    block:
-      line_numbers: false
-
-# Sass/SCSS settings
-sass:
-  sass_dir: _sass
-  style: compressed
+  - SETUP_COMPLETE.md
+  - SETUP_COMPLETE.pdf
